[workspace]
members = ["bamboo-boot", "bamboo-config", "bamboo-log", "bamboo-registry", "bamboo-rest", "bamboo-rpc", "bamboo-status", "bamboo-tracing"]

[workspace.package]
version = "1.0.0"
authors = ["go-bamboo"]
repository = "https://github.com/go-bamboo/bamboo-rs.git"
license = "MIT License"
edition = "2021"

[workspace.dependencies]

async-trait = "0.1.77"
futures = "0.3.28"
futures-util = "0.3"
futures-core = "0.3"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = { version = "1.0.40" }
anyhow = { version = "1.0.86" }
dashmap = "6.0.1"

# tokio
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-graceful = "0.1.6"


# serde
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }

# protobuf
prost = "0.12.3"
bytes = "1.4.0"
validator = { version = "0.16.1", features = ["derive"] }

# config
config = { git = "https://github.com/go-bamboo/config-rs.git" }
#config = { path = "../config-rs" }

# log
log = "0.4.14"

# grpc
hyper = { version = "0.14.15", features = ["full"] }
hyper-tls = { version = "0.5.0" }
tonic = { version = "0.10.2" }
tonic-health = { version = "0.10.2" }

# http
axum = { version = "0.7.2", features = ['default', 'macros'] }

# tower
tower-service = { version = "0.3.2" }                   # 这是中间接口
tower-layer = { version = "0.3.2" }                     # 这是中间件接口
tower = { version = "0.4.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }

# ta
polars = "0.36.2"
ta = "0.5.0"

# db
redis = { version = "0.24.0", features = ["tokio-comp"] }
sea-orm = { version = "0.12.9", features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-mysql",
] }
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs" }

# decimal
rust_decimal = { version = "1.30", features = ["serde", "serde-str"] }
rust_decimal_macros = "1.30"

# lib
bamboo-status = { path = "./bamboo-status"}
bamboo-log = { path = "./bamboo-log"}
bamboo-boot = { path = "./bamboo-boot"}




