[workspace]
members = ["bamboo-boot", "bamboo-config", "bamboo-log", "bamboo-registry", "bamboo-rest", "bamboo-rpc", "bamboo-status", "bamboo-tower", "bamboo-tower-http", "bamboo-tracing", "bamboo-utils"]

[workspace.package]
version = "1.0.0"
authors = ["go-bamboo"]
repository = "https://github.com/go-bamboo/bamboo-rs.git"
license = "MIT License"
edition = "2021"

[workspace.dependencies]

# tokio
async-trait = "0.1.77"
futures = "0.3.28"
futures-util = "0.3"
futures-core = "0.3"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-graceful = "0.1.6"

# st
dashmap = "6.0.1"

# error
thiserror = { version = "1.0.40" }
anyhow = { version = "1.0.86" }

# serde
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }

# protobuf
prost = "0.12.3"
bytes = "1.4.0"
validator = { version = "0.16.1", features = ["derive"] }

# config
config = { git = "https://github.com/go-bamboo/config-rs.git" }
#config = { path = "../config-rs" }

# log
log = "0.4.14"

# transport
http = { version = "1.0.0" }
http-body = { version = "1.0.0" }

# grpc
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
hyper-tls = "0.6.0"
tonic = { version = "0.10.2" }
tonic-health = { version = "0.10.2" }

# http
axum = { version = "0.7.2", features = ['default', 'macros'] }

# tower
tower-service = { version = "0.3.2" }                   # 这是中间接口
tower-layer = { version = "0.3.2" }                     # 这是中间件接口
tower = { version = "0.4.13", features = ["full"] }     # 所有实现
tower-http = { version = "0.5.0", features = ["full"] }

# trace
tracing = "0.1"

# otel
opentelemetry = { version = "0.24.0" }
opentelemetry_sdk = { version = "0.24.0" }
opentelemetry-stdout = { version = "0.24.0" }

# lib
bamboo-utils = { path = "./bamboo-utils" }
bamboo-status = { path = "./bamboo-status" }
bamboo-log = { path = "./bamboo-log" }
bamboo-boot = { path = "./bamboo-boot" }
bamboo-tower-http = { path = "./bamboo-tower-http" }




