[workspace]
members = ["bamboo-boot", "bamboo-cache", "bamboo-config", "bamboo-log", "bamboo-prost", "bamboo-registry", "bamboo-rest", "bamboo-rpc", "bamboo-status", "bamboo-tower", "bamboo-tower-http", "bamboo-tracing", "bamboo-utils"]

[workspace.package]
version = "1.0.0"
authors = ["go-bamboo"]
repository = "https://github.com/go-bamboo/bamboo-rs.git"
license = "MIT License"
edition = "2021"

[workspace.dependencies]

# tokio
async-trait = { version = "0.1" }
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-graceful = "0.1"

# st
dashmap = "6.0.1"

# error
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# protobuf
prost = "0.12.3"
prost-types = "0.12.3"
bytes = "1.4.0"
validator = { version = "0.16.1", features = ["derive"] }

# log
log = "0.4.14"

# time
chrono = { version = "0.4.24", features = ["serde"] }
humantime = "2.1.0"

# url
url = "2.5.1"

# transport
http = { version = "1" }
http-body = { version = "0.1" }

# grpc
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
hyper-tls = "0.6.0"
tonic = { version = "0.12.2" }
tonic-health = { version = "0.12.2" }

# http
axum = { version = "0.7.2", features = ['default', 'macros'] }

# tower
tower-service = { version = "0.3" }                   # 这是中间接口
tower-layer = { version = "0.3" }                     # 这是中间件接口
tower = { version = "0.4.7", features = ["full"] }     # 所有实现
tower-http = { version = "0.5.0", features = ["full"] } # axum依赖

# trace
tracing = "0.1"

# otel
opentelemetry = { version = "0.24.0" }
opentelemetry_sdk = { version = "0.24.0" }
opentelemetry-stdout = { version = "0.5.0" }

# lib
bamboo-utils = { path = "./bamboo-utils" }
bamboo-status = { path = "./bamboo-status" }
bamboo-log = { path = "./bamboo-log" }
bamboo-boot = { path = "./bamboo-boot" }
bamboo-tower-http = { path = "./bamboo-tower-http" }




