[package]
name = "bamboo-rest"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bamboo-status = { workspace = true }
bamboo-boot = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-graceful = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

axum = { workspace = true }