[package]
name = "bamboo-rest"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bamboo-status = { workspace = true }
bamboo-boot = { workspace = true }
bamboo-tower-http = { workspace = true }

# tokio
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-graceful = { workspace = true }


log = { workspace = true }
serde = { workspace = true }

# http
hyper = { workspace = true }
hyper-util = { workspace = true }
tonic = { workspace = true }
axum = { workspace = true }

# tower
tower-service = { workspace = true }
tower-layer = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

bytes = { workspace = true }
validator = { workspace = true }