[package]
name = "bamboo-rpc"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bamboo-status = { workspace = true }
bamboo-boot = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-graceful = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

# transport
http = { workspace = true }

# grpc
hyper = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }

# tower
tower-service = { workspace = true }
tower-layer = { workspace = true }
tower = { workspace = true }