[package]
name = "bamboo-status"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
validator = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
