[package]
name = "bamboo-tower-http"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }

# transport
http = { workspace = true }

# tower
tower-service = { workspace = true }
tower-layer = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# tracing
tracing = { workspace = true }

# validator
validator = { workspace = true }
bytes = { workspace = true }